messaging_app/deployment.yaml
# messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: your-django-image:tag   # e.g. username/messaging_app:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP  # internal service
